--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@ layout: compress
 
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
-        <h1 class="hero__title">Sleek</h1>
-        <p class="hero__meta">Modern Jekyll theme focused on speed performance & SEO best practices</p>
+        <h1 class="hero__title" style=" font-size: 120; color: #ffffff75;" >Matias-container</h1>
+        <p class="hero__meta" style="font-size: 22; color: #ffffff75; margin-top:40px">The mordern article</p>
       </div>
     </div>
 
