--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@ layout: compress
 
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
-        <h1 class="hero__title" style=" font-size: 80; color: #ffffff75;" >Matias-Container</h1>
-        <p class="hero__meta" style="font-size: 22; color: #ffffff75; margin-top:20px">The mordern article</p>
+        <h1 class="hero__title" style="color: #ffffff75;" >Matias-Container</h1>
+        <p class="hero__meta" style="color: #ffffff75;">The mordern article</p>
       </div>
     </div>
 
